--- a/HTML/FAQ/faq.html
+++ b/HTML/FAQ/faq.html
@@ -22,6 +22,11 @@
             <div class="logo">
                 <img src="image/logo-small.png" alt="logo">
             </div>
+            <input type="checkbox" id="click">
+            <label for="click" class="menu-btn">
+                <i class="fas fa-bars"></i>
+            </label>
+
             <ul class="menu">
                 <li><button class="box"><a href="#" class="first">Book Now</a></button></li>
                 <li><button class="box-two"><a href="#" class="two"></a> Prices & Services</a></button></li>
