--- a/HTML/Contact/contact.html
+++ b/HTML/Contact/contact.html
@@ -20,6 +20,10 @@
                 <div class="logo">
                     <img src="image/logo-small.png" alt="logo">
                 </div>
+                <input type="checkbox" id="click">
+                <label for="click" class="menu-btn">
+                    <i class="fas fa-bars"></i>
+                </label>
                 <ul class="menu">
                     <li><button class="box"><a href="#" class="first">Book Now</a></button></li>
                     <li><button class="box-two"><a href="#" class="two"></a> Prices & Services</a></button></li>
