--- a/HTML/Service Provider- Become A Pro/index.html
+++ b/HTML/Service Provider- Become A Pro/index.html
@@ -24,6 +24,10 @@
                 <div class="logo">
                     <img src="image/white-logo-transparent-background.png" alt="logo">
                 </div>
+                <input type="checkbox" id="click">
+            <label for="click" class="menu-btn">
+                <i class="fas fa-bars"></i>
+            </label>
                 <ul class="menu">
                     <li><button class="box"><a href="#" class="first">Book a Cleaner</a></button></li>
                     <li><a href="#" class="three">Prices</a></li>
